--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build:ui":"rm -rf build && cd ../notesApp && npm run build && cp -r build ../notesApp",
+    "deploy":"git push heroku master",
+    "deploy:full":"npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod":"heroku logs --tail",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
