--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui":"rm -rf build && cd ../notesApp && npm run build && cp -r build ../notesApp",
-    "deploy":"git push heroku master",
-    "deploy:full":"npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod":"heroku logs --tail",
+    "lint":"eslint .",
+    "build:ui": "rm -rf build && cd ../notesApp && npm run build && cp -r build ../notesApp",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.27.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
